# Nexora-Zorbox

./: .gitignore
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  compose-e2e.yml  node-ci.yml  python-ci-reporter.yml  python-ci-ti.yml  python-ci.yml
docs/: ZORBOX_FINAL_RUNBOOK.md
frontend-ui/: README.md  package-lock.json
frontend-ui/src/: App.jsx
infra/: docker-compose.yml  smoke.ps1  smoke.sh
infra/k8s/: README.md  namespace.yaml  orchestrator.yaml  reporter.yaml  sandbox.yaml  static-analyzer.yaml  ti.yaml
infra/monitoring/: prometheus.yml
orchestrator/: Dockerfile  README.md  pyproject.toml
orchestrator/app/: archive.py  main.py  schemas.py  state.py  storage.py
reporter-service/: Dockerfile
reporter-service/app/: main.py  pdf.py  schema_report.json
sandbox-native/: Dockerfile  pyproject.toml
sandbox-native/app/: main.py
static-analyzer/: pyproject.toml
static-analyzer/app/: main.py  schema_analyzer.json
static-analyzer/app/rules/: sample.yar
ti-enrichment/: pyproject.toml
ti-enrichment/app/: main.py
