[project]
name = "zorbox-orchestrator"
version = "0.1.0"
description = "ZORBOX Orchestrator (MVP)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "prometheus-client>=0.20.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "python-magic>=0.4.27",
  "py7zr>=0.20.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
