[project]
name = "zorbox-sandbox-native"
version = "0.1.0"
description = "ZORBOX Sandbox Native (MVP stub)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "prometheus-client>=0.20.0",
  "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
